--- a/packages/benchmarks/src/textToDriver/notebooks/extract_eval_cases.ipynb
+++ b/packages/benchmarks/src/textToDriver/notebooks/extract_eval_cases.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a248dd48-62ae-4efa-a3bd-ac3461f8c362",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "de985e0a-44d3-40ad-a054-8dd5751b5726",
    "metadata": {},
    "outputs": [],
@@ -44,17 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "eb49ec56-3070-490b-90e8-e4f55ce2bf04",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "directory of the app mod project (e.g. /Users/<USER>/projects) /Users/ben.p/projects\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -71,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "147759d6-b2b5-4fd1-aeaf-b9f8ea3c422f",
    "metadata": {},
    "outputs": [
@@ -93,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "6b0edca6-fcfd-4fe2-87fc-cfa2b9d29a61",
    "metadata": {},
    "outputs": [
@@ -101,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "177\n"
+      "Num eval cases: 177\n"
      ]
     }
    ],
@@ -128,10 +121,12 @@
     "            dict_case = yaml.safe_load(yaml_case)\n",
     "            # pprint(dict_case)\n",
     "            eval_case = {\n",
-    "                \"input\": remove_num_prefix(dict_case[\"name\"]),\n",
+    "                \"input\": {\n",
+    "                    \"nl_query\": remove_num_prefix(dict_case[\"name\"]),\n",
+    "                    \"dataset_name\": ds_name,\n",
+    "                },\n",
     "                \"expected\": dict_case[\"real_sql_output\"],\n",
     "                \"metadata\": {\n",
-    "                    \"dataset_name\": ds_name,\n",
     "                    \"app_mod_case_id\": int(os.path.splitext(os.path.basename(case_file))[0]),\n",
     "                    \"sql\": {\n",
     "                        \"query\": dict_case[\"payload\"][\"context\"][\"code\"],\n",
@@ -146,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "a370706a-7dcb-4ad9-ae34-9f489e145265",
    "metadata": {},
    "outputs": [
